✨ added dynamic navbar to project

--- a/bope/app/public/wp-content/themes/military-habbo/military-habbo/assets/src/departament.css
+++ b/bope/app/public/wp-content/themes/military-habbo/military-habbo/assets/src/departament.css
@@ -14,6 +14,9 @@
   transition: all .4s;
 
   background-image: url(../../assets/img/Welcome/bonitinho.png);
+
+  max-width: 546px;
+  width: 100%;
 }
 .card--departament:hover {
   filter: brightness(0.9);
