--- a/bope/app/public/wp-content/themes/military-habbo/military-habbo/assets/src/military-search.css
+++ b/bope/app/public/wp-content/themes/military-habbo/military-habbo/assets/src/military-search.css
@@ -117,6 +117,7 @@
   margin-left: 30px;
   margin-right: 30px;
   margin-bottom: 30px;
+  padding-top: 35px;
 }
 .pesquisa-fundo {
   position: relative;
@@ -135,6 +136,12 @@
   border: 4px solid #fff;
   border-radius: 500px;
   background-position: center top -30px;
+}
+#carregando {
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 25px;
 }
   
 /*End Results*/
