--- a/bope/app/public/wp-content/themes/military-habbo/military-habbo/assets/src/navbar.css
+++ b/bope/app/public/wp-content/themes/military-habbo/military-habbo/assets/src/navbar.css
@@ -22,16 +22,26 @@
   filter: drop-shadow(0px 5px 20px var(--Black));
   -webkit-filter: drop-shadow(0px 5px 20px var(--Black));
 }
-div#navbarNav {
+div#bs-example-navbar-collapse-1 {
   justify-content: center;
 }
-.navbar--bope .container #navbarNav ul .nav-item {
+.navbar--bope .container #bs-example-navbar-collapse-1 ul .nav-item {
   width:160px;
   height:60px;
   display:flex;
   justify-content: center;
   align-items:center;
+
+  /* background-color: var(--Black800); */
 }
-.navbar--bope .container #navbarNav ul .nav-item:nth-child(even) {
+.dropdown-item {
+  background-color: var(--White);
+}
+.navbar--bope .container #bs-example-navbar-collapse-1 ul .nav-item:nth-child(even) {
   background-color: var(--Red500);
+}
+ul.dropdown-menu.show {
+  width: 100%;
+  height: 60px;
+  padding: 0;
 }
